# falcon

./: CMakeLists.txt
inc/: Stream.h  falcon.h  falcon_API.h  protocol.h  stream.h
samples/client/: main.cpp
samples/server/: main.cpp
src/: falcon_client.cpp  falcon_common.cpp  falcon_posix.cpp  falcon_server.cpp  falcon_stream.cpp  falcon_windows.cpp
tests/: test.cpp
